google OAuto implement

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,4 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>This is home page</h1>
+
+<div style="text-align:center; margin-top:30vh;" >
+    <h1>This is home page</h1>
+    <h2>Register or Login to see the leates news.</h2>
+
+</div>
