add bookmark section

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/News">News</a>
                         </li>
                     </ul>
+                    <div>
+                        <a href="/Bookmarks" class="btn btn-outline-primary btn-sm ms-auto">
+                            <i class="fas fa-bookmark"></i> My Bookmarks
+                        </a>
+                    </div>
                     @* login partial here *@
                     <partial name="_LoginPartial" />
                 </div>
