--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-
-<div style="text-align:center; margin-top:30vh;" >
-    <h1>This is home page</h1>
-    <h2>Register or Login to see the leates news.</h2>
-
+<div class="home-page-background">
+    <div style="text-align:center; margin-top:30vh;">
+        <h1>Welcome, this is home page.</h1>
+        @* <h2>Register or Login to see the latest news.</h2> *@
+    </div>
 </div>
