--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,15 @@
 
 <div class="home-page-background">
     <div style="text-align:center; margin-top:30vh;">
-        <h1>Welcome, this is home page.</h1>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <h1>Hello, @User.Identity.Name</h1>
+            <h2>Welcome to CyberBrief</h2>
+        }
+        else
+        {
+            <h1>Please login to see leatest News</h1>
+        }
         @* <h2>Register or Login to see the latest news.</h2> *@
     </div>
 </div>
