--- a/Views/Shared/_NewsItemsPartial.cshtml
+++ b/Views/Shared/_NewsItemsPartial.cshtml
@@ -13,6 +13,7 @@
             "apt" => "category-apt",
             "security update" => "category-security-update",
             "ddos" => "category-ddos",
+            "ai" => "category-ai",
             "general" => "category-general",
             _ => "category-general"
         };
